--- a/index.html
+++ b/index.html
@@ -2,11 +2,21 @@
 <html lang="en">
 	<head>
 		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta
+			name="viewport"
+			content="width=device-width, initial-scale=1.0"
+		/>
 		<title>Document</title>
 		<link rel="stylesheet" href="styles.css" />
 	</head>
 	<body>
+		<header>
+			<button id="btn-random-beer">CERVEZA ALEATORIA</button>
+		</header>
+
+		<main></main>
+
 		<script src="script.js"></script>
+		<!-- <script src="perros.js"></script> -->
 	</body>
 </html>
