--- a/index2.html
+++ b/index2.html
@@ -11,14 +11,15 @@
 	</head>
 	<body>
 		<header>
-			<button id="btn-random-beer">CERVEZA ALEATORIA</button>
+			<button id="btn-random-dog">PERRO ALEATORIO</button>
 
-			<button id="btn-list-beers">LISTA CERVEZAS</button>
+			<select></select>
+			<button id="btn-list-dogs">LISTA PERROS POR RAZA</button>
 		</header>
 
 		<main></main>
 
-		<script src="script.js"></script>
-		<!-- <script src="perros.js"></script> -->
+		<!-- <script src="script.js"></script> -->
+		<script src="perros.js"></script>
 	</body>
 </html>
